@@ -1,8 +1,8 @@
 
-$Id: changes.txt,v 1.122 2007/03/09 17:25:57 vvd0 Exp $
+$Id: changes.txt,v 1.123 2007/03/21 20:37:15 vvd0 Exp $
 
 MVDSV v0.26 build 2666 (2007.04.09)
-MVDSV v0.25.20-CVS build 26?? (2007.0?.??)
+MVDSV v0.25.21-CVS build 26?? (2007.0?.??)
 ----
 * qqshka <qqshka@users.sourceforge.net>
 - changed QVM API version to 12, G_FINDRADIUS worked now and also added G_MAKEVECTORS,
@@ -11,6 +11,7 @@ MVDSV v0.25.20-CVS build 26?? (2007.0?.??)
 - changed QVM API version to 11 due to i've add G_CMD_TOKENIZE, g_strlcpy, g_strlcat
 
 * VVD <vvd0@users.sourceforge.net>
+- cvar skill have no upper limit now
 - returned back md4 instead mdfour
 - default value for sv_demofps increased from 20 to 30
 - bugfix from 0.19.20-develop: pause with sv_minping > 0 cause server inaccessible -
